--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ logging:
     org.springframework.web: INFO
     org.springframework.security: INFO
     org.springframework.boot.autoconfigure: DEBUG
-jwt:
-  private.key: classpath:app.key
-  public.key: classpath:app.pub
+
+security:
+  jwt:
+   key:
+    private: classpath:app.key
+    public: classpath:app.pub
+   expiration: 3600000 #1h
